# SOME-gui

./: .gitmodules  CMakeLists.txt  README.md
libs/midifile/: CMakeLists.txt
libs/r8bsrc/: CMakeLists.txt
src/: CMakeLists.txt  OrtLoader.cpp  OrtLoader.h  Worker.cpp  Worker.h  main.cpp  ort.cmake
src/Inference/: ExecutionProviderOptions.h  Inference.cpp  Inference.h  InferenceUtils.hpp  NotesStruct.h  SOMEInference.cpp  SOMEInference.h
src/Slicer/: Slicer-inl.h  Slicer.cpp  Slicer.h
src/Widgets/: FileSelectionWidget.cpp  FileSelectionWidget.h  MainWindow.cpp  MainWindow.h
